corpus/cpp/overload/case-01/snapshots/gcc15/render.default.txt
error: [type_mismatch] type or overload mismatch @ src/main.cpp:5:5
help: compare the expected type and actual argument at the call site
want: int, int
got : int
via : void takes(int, int) @ src/main.cpp:1:6  +3 candidates
| src/main.cpp:5:5
|     takes(1);
|     ^
raw: rerun with --formed-profile=raw_fallback to inspect the original compiler output